fix bad contrast on tertiary text color in orange theme

--- a/styles/themes.scss
+++ b/styles/themes.scss
@@ -292,7 +292,7 @@ body {
     --c-secondary-container-text: #fcdebc;
 
     --c-tertiary: #bacd9f;
-    --c-tertiary-text: #ffffff;
+    --c-tertiary-text: #000000;
     --c-tertiary-container: #3c4c28;
     --c-tertiary-container-text: #d6e9b9;
 
